# default_struct

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: latex.yml  sphinx_doc.yml
docs/source/: conf.py  index.rst
etc/: default_struct.yml  default_struct_dev.yml
paper/: Makefile  main.tex  packages.tex
paper/plots/: MakePlots.sh
src/default_struct/: _version.py  default_structure_code.py
tests/: test_default_struct.py
