[metadata]
name = default_struct
description = default structure for python
author = Antoine Depasse
author_email = antoine.depasse@ligo.org
maintainer = Antoine Depasse
maintainer_email = antoine.depasse@ligo.org
license = MIT
license_files = LICENSE

platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages =
    default_struct
install_requires =
    #requests>=2
python_requires = >=3.8
package_dir =
    =src

[options.extras_require]
testing =
    pytest>=7.1
    pytest-cov>=4.0
    mypy>=0.991
    flake8>=5.0
    tox>=3.27

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160